--- a/themes/simplebootx/config.html
+++ b/themes/simplebootx/config.html
@@ -7,7 +7,7 @@ $tmpl=sp_get_theme_path();
 
 $default_home_slides=array(
 	array(
-		"slide_name"=>"ThinkCMFX2.0.0发布啦！",
+		"slide_name"=>"欢迎来到忆天堂!",
 		"slide_pic"=>$tmpl."Public/images/demo/1.jpg",
 		"slide_url"=>"",
 	),
