简单实现地区代码的存取和编辑

--- a/themes/simplebootx/Portal/person.html
+++ b/themes/simplebootx/Portal/person.html
@@ -48,6 +48,18 @@
                 </div>
                 <hr>
                 <div id="article_content">
+                    <p>所属地区id：{$post_region}</p>
+                    <!--前台前端目前简单实现了显示地区id，后期
+                    TODO:写前端样式，用js处理获取到的地区id并以合适的形式展示
+                    NOTE:关于按地区筛选.
+                    举个栗子：320113是江苏省(32)南京市(01)栖霞区(13)，两位数字一组
+                    那么筛选全江苏省的可以搜索320000<=region<=329999的，
+                    全南京的320100<=region<=320199，以此类推
+                    region取等于下限的值的情况出现在有人物的地区不详时
+                    例如：仅知道人物属于江苏省，应向数据库写入region=320000
+                    仅知道人物属于南京市，region=320100
+                    如果完全不详则region=0
+                    -->
                     {$post_content}
                 </div>
                 <if condition="!empty($post_source)">
