--- a/admin/themes/simplebootx/Portal/AdminPost/edit.html
+++ b/admin/themes/simplebootx/Portal/AdminPost/edit.html
@@ -38,7 +38,10 @@
 								多关键词之间用空格或者英文逗号隔开
 							</td>
 						</tr>
-	
+						<tr>
+							<th>所属地区</th><!--TODO:需要改成三联下拉框，此外省级单位可以直接写死在这里节约一次ajax请求，然后查询结果大约可以缓存在cookie里？-->
+							<td><input type="text" name="post[post_region]" id="region" value="{$post['post_region']}" style="width: 400px" placeholder="请输入地区码"></td>
+						</tr>
 						<tr>
 							<th>文章来源</th>
 							<td>
@@ -66,7 +69,7 @@
 									<ul id="photos" class="pic-list unstyled">
 										<foreach name="smeta['photo']" item="vo">
 										<li id="savedimage{$key}">
-											<input type="text" name="photos_url[]" value="{:sp_get_asset_upload_path($vo['url'])}" title="双击查看" style="width: 310px;" ondblclick="image_priview(this.value);" class="input image-url-input"> 
+											<input type="text" name="photos_url[]" value="{:sp_get_asset_upload_path($vo['url'])}" title="双击查看" style="width: 310px;" ondblclick="image_priview(this.value);" class="input image-url-input">
 											<input type="text" name="photos_alt[]" value="{$vo.alt}" style="width: 160px;" class="input image-alt-input" onfocus="if(this.value == this.defaultValue) this.value = ''" onblur="if(this.value.replace(' ','') == '') this.value = this.defaultValue;">
 											<a href="javascript:flashupload('replace_albums_images', '图片替换','savedimage{$key}',replace_image,'10,gif|jpg|jpeg|png|bmp,0','','','')">替换</a>
 											<a href="javascript:remove_div('savedimage{$key}')">移除</a>
@@ -123,7 +126,7 @@
 									$istop_yes=$post['istop']==1?"checked":"";
 									$istop_no=$post['istop']==0?"checked":"";
 									$recommended_yes=$post['recommended']==1?"checked":"";
-									$recommended_no=$post['recommended']==0?"checked":""; 
+									$recommended_no=$post['recommended']==0?"checked":"";
 								</php>
 								<label class="radio"><input type="radio" name="post[post_status]" value="1" {$status_yes}>审核通过</label>
 							</td>
