--- a/themes/simplebootx/Public/scripts.html
+++ b/themes/simplebootx/Public/scripts.html
@@ -37,8 +37,9 @@ var GV = {
 				$("#main-menu-user li.user.offline").show();
 			}
 			
-		});	
-		;(function($){
+		});
+
+		(function ($) {
 			$.fn.totop=function(opt){
 				var scrolling=false;
 				return this.each(function(){
