--- a/admin/themes/simplebootx/Admin/login.html
+++ b/admin/themes/simplebootx/Admin/login.html
@@ -67,8 +67,8 @@ var GV = {
 <script src="__PUBLIC__/js/jquery.js"></script>
 <script type="text/javascript" src="__PUBLIC__/js/common.js"></script>
 <script>
-;(function(){
-	document.getElementById('js-admin-name').focus();
+	(function () {
+		document.getElementById('js-admin-name').focus();
 })();
 </script>
 </body>
