--- a/admin/themes/simplebootx/Portal/AdminPost/add.html
+++ b/admin/themes/simplebootx/Portal/AdminPost/add.html
@@ -74,7 +74,7 @@
                                 <legend>图片列表</legend>
                                 <ul id="photos" class="pic-list unstyled"></ul>
                             </fieldset>
-                            <a href="javascript:;" onclick="javascript:flashupload('albums_images', '图片上传','photos',change_images,'10,gif|jpg|jpeg|png|bmp,0','','','')" class="btn btn-small">选择图片</a>
+                            <a href="javascript:;" onclick="flashupload('albums_images', '图片上传','photos',change_images,'10,gif|jpg|jpeg|png|bmp,0','','','')" class="btn btn-small">选择图片</a>
                         </td>
                     </tr>
                 </table>
