--- a/themes/simplebootx/User/index.html
+++ b/themes/simplebootx/User/index.html
@@ -46,7 +46,7 @@
 					               				<label class="control-label" for="input-sex">性别</label>
 					               				<div class="controls">
 					               				<php>
-					               				$sexs=array("0"=>"保密","1"=>"程序猿","2"=>"程序媛");
+					               				$sexs=array("0"=>"保密","1"=>"男","2"=>"女");
 					               				
 					               				</php>
 					               					{$sexs[$sex]}
