--- a/themes/simplebootx/Public/nav.html
+++ b/themes/simplebootx/Public/nav.html
@@ -1,6 +1,6 @@
 {:hook('body_start')}
 <div class="navbar navbar-fixed-top">
-   <div class="navbar-inner">
+   <div class="navbar-inner" style="background-image: url(__TMPL__Public/images/s-opcity.png);">
      <div class="container">
        <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
          <span class="icon-bar"></span>
@@ -37,8 +37,8 @@
 	           		<img src="__TMPL__/Public/images/headicon.png" class="headicon"/>登录<b class="caret"></b>
 	            </a>
 	            <ul class="dropdown-menu pull-right">
-	               <li><a href="{:U('api/oauth/login',array('type'=>'sina'))}"><i class="fa fa-weibo"></i> &nbsp;微博登录</a></li>
-	               <li><a href="{:U('api/oauth/login',array('type'=>'qq'))}"><i class="fa fa-qq"></i> &nbsp;QQ登录</a></li>
+	               <!-- <li><a href="{:U('api/oauth/login',array('type'=>'sina'))}"><i class="fa fa-weibo"></i> &nbsp;微博登录</a></li>
+	               <li><a href="{:U('api/oauth/login',array('type'=>'qq'))}"><i class="fa fa-qq"></i> &nbsp;QQ登录</a></li> -->
 	               <li><a href="{:U('user/login/index')}"><i class="fa fa-sign-in"></i> &nbsp;登录</a></li>
 	               <li class="divider"></li>
 	               <li><a href="{:U('user/register/index')}"><i class="fa fa-user"></i> &nbsp;注册</a></li>
