--- a/themes/simplebootx/Portal/person.html
+++ b/themes/simplebootx/Portal/person.html
@@ -48,7 +48,7 @@
                 </div>
                 <hr>
                 <div id="article_content">
-                    <p>所属地区：{$post_province} {$post_city} {$post_district}</p>
+                    <p>所属地区：{$post_region}</p>
                     {$post_content}
                 </div>
                 <if condition="!empty($post_source)">
