--- a/admin/themes/simplebootx/Portal/AdminPost/add.html
+++ b/admin/themes/simplebootx/Portal/AdminPost/add.html
@@ -42,12 +42,6 @@
                             多关键词之间用空格或者英文逗号隔开
                         </td>
                     </tr>
-                    <!--<tr>-->
-                    <!--<th>所属地区</th>&lt;!&ndash;TODO:需要改成三联下拉框，此外省级单位可以直接写死在这里节约一次ajax请求，然后查询结果大约可以缓存在cookie里？&ndash;&gt;-->
-                    <!--<td>-->
-                    <!--<input type="text" name="post[post_region]" id="region" value="" style="width: 400px" placeholder="请输入地区码">-->
-                    <!--</td>-->
-                    <!--</tr>-->
                     <tr>
                         <th width="80">逝世日期</th>
                         <td>
@@ -58,7 +52,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <th>所属地区</th><!--TODO:需要改成三联下拉框，此外省级单位可以直接写死在这里节约一次ajax请求，然后查询结果大约可以缓存在cookie里？-->
+                        <th>所属地区</th>
                         <td>
                             <div data-toggle="distpicker" id="distpicker">
                                 <select data-province="---- 选择省 ----" name="post[post_province]"></select>
