修改配色和文案

--- a/themes/simplebootx/Portal/article.html
+++ b/themes/simplebootx/Portal/article.html
@@ -43,7 +43,7 @@
 					<a href="{:U('article/index',array('id'=>$prev['tid']))}" class="btn btn-primary pull-left">上一篇</a>
 					</if>
 					<if condition="!empty($next)">
-					<a href="{:U('article/index',array('id'=>$next['tid']))}" class="btn btn-warning pull-right">下一篇</a>
+					<a href="{:U('article/index',array('id'=>$next['tid']))}" class="btn btn-primary pull-right">下一篇</a>
 					</if>
     	            <script type="text/javascript" src="__TMPL__Public/js/qrcode.min.js"></script>
                     <div id="qrcode" style="width: 100px;margin:0 auto"></div>
