--- a/themes/simplebootx/Portal/index.html
+++ b/themes/simplebootx/Portal/index.html
@@ -95,8 +95,8 @@ $home_slides=empty($home_slides)?$default_home_slides:$home_slides;
             <h1><p>公告：</p></h1>
             <p>Notice：</p>
             <br />
-            <p><span>这里是忆天堂官方网站，忆天堂是为逝去的生命悼念之所。更多内容</span></p>
-            <p>Here is The Memory of Heaven's offical website.Mourning the loss life.More.</p>
+            <p><span>这里是忆天堂官方网站，忆天堂是为逝去的生命悼念之所。</span></p>
+            <p>Here is HeavenSky's official website. Mourning the passed.</p>
         </div>
 	<div class="img-box">
 		<div class="lg-box">
