--- a/themes/simplebootx/Portal/search.html
+++ b/themes/simplebootx/Portal/search.html
@@ -31,13 +31,13 @@
 							<div class="pull-left">
 								<div class="list-actions">
 								<a href="javascript:;"><i class="fa fa-eye"></i><span>{$vo.post_hits}</span></a>
-								<a href="{:U('article/do_like',array('id'=>$vo['object_id']))}" class="js-count-btn"><i class="fa fa-thumbs-up"></i><span class="count">{$vo.post_like}</span></a>
+								<a href="{:U('article/do_like',array('id'=>$vo['object_id']))}" class="js-count-btn">献花<span class="count">{$vo.post_like}</span></a>
 								<a href="{:U('user/favorite/do_favorite',array('id'=>$vo['object_id']))}" class="js-favorite-btn" data-title="{$vo.post_title}" data-url="{:U('portal/article/index',array('id'=>$vo['tid']))}" data-key="{:sp_get_favorite_key('posts',$vo['object_id'])}">
 									<i class="fa fa-star-o"></i>
 								</a>
 								</div>
 							</div>
-							<a class="btn btn-warning pull-right" href="{:leuu('article/index',array('id'=>$vo['tid']))}">查看更多</a>
+							<a class="btn btn-primary pull-right" href="{:leuu('article/index',array('id'=>$vo['tid']))}">查看更多</a>
 						</div>
 					</div>
 					</volist>
