使用手机号注册

--- a/themes/simplebootx/User/register.html
+++ b/themes/simplebootx/User/register.html
@@ -61,7 +61,7 @@
 						<form class="form-horizontal js-ajax-form" action="{:U('user/register/doregister')}" method="post">
 		
 							<div class="control-group">
-								<input type="text" name="email" placeholder="邮箱" class="span4">
+								<input type="text" name="mobile" placeholder="手机号" class="span4">
 							</div>
 		
 							<div class="control-group">
